--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "ts-jest": "^29.1.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
+  },
+  "dependencies": {
+    "moment": "^2.30.1"
   }
 }
