--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "nodemon --watch \"*.ts\" --exec \"node -r ts-node/register --env-file=.env\" ./src/index.ts",
+    "start": "nodemon --watch \"*.ts\" --exec \"node -r ts-node/register\" ./src/index.ts",
     "test": "node --experimental-vm-modules node_modules/.bin/jest",
     "lint": "eslint src/**/*.ts",
     "format": "eslint src/**/*.ts --fix",
